--- a/scripts/style.css
+++ b/scripts/style.css
@@ -11,7 +11,7 @@ header {
 }
 
 body {
-  background-color: #edeef0;
+  background-color: #d5d5d5;
   /*display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 2rem;*/
@@ -117,9 +117,11 @@ article {
 #recent-games {
   display: inline-block;
   width: 40%;
-  background-color: #05d7e6;
+  background-color: #edeef0b4;
   border-radius: 2%;
   height: 100%;
+  padding: 5px;
+  margin: 10px;
 }
 
 
@@ -127,17 +129,21 @@ article {
 #top-headlines {
   display: inline-block;
   height: 100%;
-  background-color: #314cb4;
+  background-color: #edeef0b4;
   border-radius: 2%;
   width: 100%;
+  margin: 10px; 
+  padding: 5px;
 }
 
 #players {
   display: inline-block;
   width: 40%;
   height: 100%;
-  background-color: #eba50f;
+  background-color: #edeef0b4;
   border-radius: 2%;
+  padding: 5px;
+  margin: 10px;
 }
 
 
@@ -146,9 +152,10 @@ article {
 
 
 .container-column {
-  height: 100%;
-  width: 100%;
+  height: 92%;
+  width: 80%;
   display: flex;
+  margin: 40px auto;
 }
 
 html {
@@ -156,14 +163,10 @@ html {
   height: 100%;
 }
 
-.container-column div{
-  width: 100%;
-  display:flex;
-  margin: 40;
-}
 
 
 /*  Login page css */
+/*
 .body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background-color: #f5f5f5;
@@ -206,4 +209,20 @@ h2 {
   display: block;
   width: 100%;
   margin-bottom: 10px;
+}
+*/
+#headline{
+  margin: 10px;
+  padding: 5px;
+  border-radius: 10px;
+
+}
+#top-headlines-display{
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  height: 100%;
+}
+#top-headlines-display::-webkit-scrollbar{
+  display: none;
 }
